--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -112,7 +112,7 @@
     </Compile>
     <Compile Include="Repositories\User\AdminRepositoryTests.cs" />
     <Compile Include="Repositories\CalculationRepositoryTests.cs" />
-    <Compile Include="Repositories\ApplicationEventRepositoryTests.cs" />
+    <Compile Include="Repositories\EventRepositoryTests.cs" />
     <Compile Include="Repositories\EmailTemplateRepositoryTests.cs" />
     <Compile Include="Repositories\CityRepositoryTests.cs" />
   </ItemGroup>
