--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -82,6 +82,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JobRunnerHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -124,6 +125,10 @@
     <ProjectReference Include="..\Alicargo.DataAccess\Alicargo.DataAccess.csproj">
       <Project>{37068536-3066-4877-91e0-05031d2c5ca3}</Project>
       <Name>Alicargo.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Alicargo.Jobs\Alicargo.Jobs.csproj">
+      <Project>{C2133743-7762-4BD9-A824-EB039E41AF58}</Project>
+      <Name>Alicargo.Jobs</Name>
     </ProjectReference>
     <ProjectReference Include="..\Alicargo.TestHelpers\Alicargo.TestHelpers.csproj">
       <Project>{BB7C7B4A-D181-4812-89BC-29EB406E9656}</Project>
