--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Helpers\TableParameter.cs" />
     <Compile Include="Helpers\UserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EventEmailRecipient.cs" />
     <Compile Include="Repositories\EventRepository.cs" />
     <Compile Include="Repositories\Application\ApplicationFileRepository.cs" />
     <Compile Include="Repositories\Application\ApplicationRepository.cs" />
