--- a/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
+++ b/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
@@ -79,8 +79,8 @@
   <ItemGroup>
     <Compile Include="ApplicationEvents\Helpers\ApplicationEventTemplatesTests.cs" />
     <Compile Include="Helpers\TemplateRepositoryWrapperTests.cs" />
-    <Compile Include="ApplicationEvents\Helpers\TextBulderHelperGetMatchTests.cs" />
-    <Compile Include="ApplicationEvents\Helpers\TextBulderHelperGetTextTests.cs" />
+    <Compile Include="Helpers\TextBulderHelperGetMatchTests.cs" />
+    <Compile Include="Helpers\TextBulderHelperGetTextTests.cs" />
     <Compile Include="ApplicationEvents\Helpers\TextBulderTests.cs" />
     <Compile Include="MessageFactoryTests.cs" />
     <Compile Include="Calculation\CalculationMailBuilderTests.cs" />
