updated MessageBuilder for application events

--- a/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
+++ b/Alicargo.Jobs.Tests/Alicargo.Jobs.Tests.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Helpers\TextBulderHelperGetMatchTests.cs" />
     <Compile Include="Helpers\TextBulderHelperGetTextTests.cs" />
     <Compile Include="ApplicationEvents\Helpers\TextBulderTests.cs" />
-    <Compile Include="MessageFactoryTests.cs" />
+    <Compile Include="ApplicationEvents\Helpers\MessageBuilderTests.cs" />
     <Compile Include="Calculation\CalculationMailBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
