--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -55,22 +55,22 @@
     <Compile Include="ApplicationEvents\Helpers\ApplicationEventTemplates.cs" />
     <Compile Include="ApplicationEvents\Abstract\IApplicationEventTemplates.cs" />
     <Compile Include="Balance\BalanceEmailCreatorProcessor.cs" />
-    <Compile Include="Balance\Helpers\IMessageBuilder.cs" />
     <Compile Include="Balance\Helpers\IRecipientsFacade.cs" />
     <Compile Include="Balance\Helpers\MessageBuilder.cs" />
     <Compile Include="Balance\Helpers\RecipientsFacade.cs" />
     <Compile Include="Calculation\CalculationEmailCreatorProcessor.cs" />
     <Compile Include="Calculation\CalculationProcessor.cs" />
     <Compile Include="Calculation\MessageFactory.cs" />
+    <Compile Include="Core\BreakJobException.cs" />
     <Compile Include="Core\DefaultEventJob.cs" />
     <Compile Include="ApplicationEvents\ApplicationMailCreatorProcessor.cs" />
     <Compile Include="ApplicationEvents\ApplicationStateHistoryProcessor.cs" />
     <Compile Include="ApplicationEvents\Entities\TextBulderException.cs" />
     <Compile Include="ApplicationEvents\Helpers\FilesFacade.cs" />
     <Compile Include="ApplicationEvents\Abstract\IFilesFacade.cs" />
-    <Compile Include="ApplicationEvents\Abstract\IMessageBuilder.cs" />
+    <Compile Include="Helpers\Abstract\IMessageBuilder.cs" />
     <Compile Include="ApplicationEvents\Abstract\IRecipientsFacade.cs" />
-    <Compile Include="Helpers\ITemplateRepositoryWrapper.cs" />
+    <Compile Include="Helpers\Abstract\ITemplateRepositoryWrapper.cs" />
     <Compile Include="ApplicationEvents\Abstract\ITextBulder.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageBuilder.cs" />
     <Compile Include="ApplicationEvents\Helpers\RecipientsFacade.cs" />
