--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -54,9 +54,9 @@
     </Compile>
     <Compile Include="ApplicationEvents\Helpers\ApplicationEventTemplates.cs" />
     <Compile Include="ApplicationEvents\Abstract\IApplicationEventTemplates.cs" />
-    <Compile Include="Balance\Helpers\IRecipientsFacade.cs" />
-    <Compile Include="Balance\Helpers\MessageBuilder.cs" />
-    <Compile Include="Balance\Helpers\RecipientsFacade.cs" />
+    <Compile Include="Balance\IRecipientsFacade.cs" />
+    <Compile Include="Balance\MessageBuilder.cs" />
+    <Compile Include="Balance\RecipientsFacade.cs" />
     <Compile Include="Calculation\CalculationEmailCreatorProcessor.cs" />
     <Compile Include="Calculation\CalculationProcessor.cs" />
     <Compile Include="Calculation\MessageFactory.cs" />
