--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -69,13 +69,15 @@
     <Compile Include="Helpers\Abstract\IMessageBuilder.cs" />
     <Compile Include="ApplicationEvents\Abstract\IRecipientsFacade.cs" />
     <Compile Include="Helpers\Abstract\ITemplateRepositoryWrapper.cs" />
-    <Compile Include="ApplicationEvents\Abstract\ITextBulder.cs" />
+    <Compile Include="ApplicationEvents\Abstract\ITextBuilder.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageBuilder.cs" />
     <Compile Include="ApplicationEvents\Helpers\RecipientsFacade.cs" />
+    <Compile Include="Helpers\Abstract\ITextBuilder.cs" />
+    <Compile Include="Helpers\Abstract\TextBuilderHelper.cs" />
     <Compile Include="Helpers\DefaultEmailingProcessor.cs" />
-    <Compile Include="Helpers\TextBulderHelper.cs" />
+    <Compile Include="Helpers\Abstract\TextBuilder.cs" />
     <Compile Include="Helpers\TemplateRepositoryWrapper.cs" />
-    <Compile Include="ApplicationEvents\Helpers\TextBulder.cs" />
+    <Compile Include="ApplicationEvents\Helpers\TextBuilder.cs" />
     <Compile Include="ApplicationEvents\Entities\TextLocalizedData.cs" />
     <Compile Include="Core\IEventProcessor.cs" />
     <Compile Include="Core\IJob.cs" />
