--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Balance\RecipientsFacade.cs" />
     <Compile Include="Balance\Entities\TextLocalizedData.cs" />
     <Compile Include="Calculation\CalculationProcessor.cs" />
+    <Compile Include="Calculation\MessageBuilder.cs" />
     <Compile Include="Core\BreakJobException.cs" />
     <Compile Include="Core\SequentialEventJob.cs" />
     <Compile Include="ApplicationEvents\ApplicationStateHistoryProcessor.cs" />
