--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -160,7 +160,7 @@
     <Compile Include="Controllers\EmailTemplateController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
     <Compile Include="Controllers\Application\SenderApplicationController.cs" />
-    <Compile Include="Controllers\Calculation\PaymentController.cs" />
+    <Compile Include="Controllers\Calculation\BalanceController.cs" />
     <Compile Include="Controllers\StateController.cs" />
     <Compile Include="Controllers\StateSettingsController.cs" />
     <Compile Include="Controllers\User\RestorePasswordController.cs" />
@@ -333,6 +333,9 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="T4MVC\AuthenticationController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="T4MVC\BalanceController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="T4MVC\BrokerController.generated.cs">
@@ -761,9 +764,9 @@
     <Content Include="Views\ClientApplication\EditorTemplates\ApplicationClientModel.cshtml" />
     <Content Include="Views\ClientApplication\Edit.cshtml" />
     <Content Include="Views\Files\ClientApplication.cshtml" />
-    <Content Include="Views\Payment\Index.cshtml" />
-    <Content Include="Views\Payment\EditorTemplates\PaymentModel.cshtml" />
-    <Content Include="Views\Payment\Payment.cshtml" />
+    <Content Include="Views\Balance\Index.cshtml" />
+    <Content Include="Views\Balance\EditorTemplates\PaymentModel.cshtml" />
+    <Content Include="Views\Balance\Payment.cshtml" />
     <Content Include="Views\RestorePassword\Index.cshtml" />
     <Content Include="Views\RestorePassword\Finish.cshtml" />
     <Content Include="Views\RestorePassword\NewPassword.cshtml" />
