--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Balance\MessageBuilder.cs" />
     <Compile Include="Balance\RecipientsFacade.cs" />
     <Compile Include="Balance\Entities\TextLocalizedData.cs" />
-    <Compile Include="Calculation\MessageBuilder.cs" />
     <Compile Include="Core\BreakJobException.cs" />
     <Compile Include="Core\SequentialEventJob.cs" />
     <Compile Include="ApplicationEvents\ApplicationStateHistoryProcessor.cs" />
@@ -86,7 +85,7 @@
     <Compile Include="ApplicationEvents\Entities\ApplicationSetStateEventData.cs" />
     <Compile Include="MailSenderJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Calculation\Resources.Designer.cs">
+    <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -94,7 +93,7 @@
     <Compile Include="Core\DefaultRunner.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Calculation\Resources.resx">
+    <EmbeddedResource Include="Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
