--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="ColsoleLogger.cs" />
     <Compile Include="CompositionHelper.cs" />
+    <Compile Include="DbTestContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockContainer.cs" />
     <Compile Include="TestConstants.cs" />
