--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\Alicargo.Core\packages.config" />
   <repository path="..\Alicargo.DataAccess.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.DataAccess\packages.config" />
+  <repository path="..\Alicargo.Jobs.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.Jobs.Tests\packages.config" />
   <repository path="..\Alicargo.TestHelpers\packages.config" />
   <repository path="..\Alicargo.Tests\packages.config" />
